# flam

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/flam/: MainActivity.kt  MyGLRenderer.kt
app/src/main/res/raw/: fragment_shader.glsl  vertex_shader.glsl
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: main.js  main.js.map  main.ts
